fixed design on small screens

--- a/FlickrTest/Content/Site.css
+++ b/FlickrTest/Content/Site.css
@@ -35,15 +35,25 @@
     background: #c0c0c0;
     border: #a0a0a0 solid 1px;
     margin: 20px;
-    height:200px;
+    height: 200px;
     line-height: 200px;
 }
 
-.selected-thumb img {
-    display: inline-block;
-    vertical-align: middle;
-    width:auto;
-    height:auto;
-    max-height:90%;
-    max-width:90%;
+    .selected-thumb img {
+        display: inline-block;
+        vertical-align: middle;
+        width: auto;
+        height: auto;
+        max-height: 90%;
+        max-width: 90%;
+    }
+
+@media only screen {
+    #tags {
+        width: 68%;
+    }
+
+    .page .spinner-loader {
+        margin-right: 58px;
+    }
 }
